feat(reporting): Plain text reporting with colour depending on severity